# simple-kafka-rust

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: common.rs  consumer.rs  consumer_test.rs  lib.rs  mock_utils.rs  producer.rs  semaphore.rs  semaphore_test.rs
api/src/common/: broker_resolver.rs  broker_resolver_test.rs
api/src/producer/: batch_publisher.rs  batch_publisher_test.rs  mock_utils.rs  partition_selector.rs  partition_selector_test.rs  producer_test.rs
broker/: Cargo.toml
broker/src/: append_only_log.rs  append_only_log_test.rs  broker.rs  broker_test.rs  client.rs  lib.rs  main.rs  model.rs  persistence.rs  test_utils.rs
broker/src/persistence/: append_only_log.rs  append_only_log_test.rs  indexing.rs  indexing_test.rs  log_reader.rs  log_reader_test.rs  persistence_test.rs
client_utils/: Cargo.toml
client_utils/src/: api_client_test.rs  lib.rs
coordinator/: Cargo.toml
coordinator/src/: client.rs  client_test.rs  dao.rs  dao_test.rs  lib.rs  main.rs  main_test.rs  mock.rs  model.rs  registry.rs  registry_test.rs
docker/: docker-compose.yaml
docker/broker/: Dockerfile
docker/coordinator/: Dockerfile
file_test_utils/: Cargo.toml
file_test_utils/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  primitives.rs  primitives_test.rs  record.rs  record_test.rs
src/: lib.rs  test_utils.rs
