[workspace]
resolver = "3"
members = ["broker", "coordinator", "file_test_utils", "protocol"]

[workspace.dependencies]
argh = "0.1.13"
assertor = "0.0.4"
mockall = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simple-server = "0.4.0"
tokio = { version = "1.48.0", features = ["sync", "macros", "rt-multi-thread", "time"] }
ureq = "3.1.2"
walkdir = "2.5.0"