[workspace]
resolver = "3"
members = ["api","broker", "client_utils", "coordinator", "file_test_utils", "protocol"]

[workspace.dependencies]
actix-web = "4.11.0"
argh = "0.1.13"
assertor = "0.0.4"
mockall = "0.13.1"
predicates = "3.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["sync", "macros", "rt-multi-thread", "time"] }
ureq =  { version = "3.1.2", features = ["json"] }
walkdir = "2.5.0"
