[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
broker = { path = "../broker" }
coordinator = { path = "../coordinator" }
linked-hash-map = "0.5.6"
mockall.workspace = true
predicates.workspace = true
protocol = { path = "../protocol" }
ureq.workspace = true

[dev-dependencies]
assertor.workspace = true