[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web.workspace = true
argh.workspace = true
client_utils = { path = "../client_utils" }
coordinator = { path = "../coordinator" }
mockall.workspace = true
protocol = { path = "../protocol" }
serde.workspace = true
tokio.workspace = true
walkdir.workspace = true

[dev-dependencies]
assertor.workspace = true
file_test_utils = { path = "../file_test_utils" }
ntest_timeout = "0.9.3"